--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,8 @@
 <ul>
   <li *ngFor="let todo of todos">{{ todo.title }}</li>
 </ul>
+
+<form [formGroup]="form">
+<input type="text" formControlName="title">
+<button (click)="addTodo()">Adicionar</button>
+</form>
